Fixed services HR alignment

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -21,4 +21,5 @@
 
 .footerSubNotes{
     font-size: 14px;
+    font-family: $ubuntuFont;
 }
