--- a/src/components/Services/ServicesColumn/ServicesColumn.scss
+++ b/src/components/Services/ServicesColumn/ServicesColumn.scss
@@ -46,14 +46,25 @@ $grayBorder: #E6ECF8;
 
 .description{
     margin-bottom: 3rem;
+    height: 4.5rem;
+    @media(min-width: 1200px){
+        height: 12rem;
+    }
 }
 
 .hrStyle{
     border: 0;
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
 .quote{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
     font-size: 1rem;
+
 }
